--- a/refset/assets/javascripts/app/templates/create.hbs
+++ b/refset/assets/javascripts/app/templates/create.hbs
@@ -3,20 +3,23 @@
   <li class="active">{{title}}</li>
 </ol>
 
+Error: [{{error.wrapper.status}}]
+Errors: [{{error.fieldErrors}}]
+
 <section class="inputs">
   <form class="form-group" {{action 'save' on="submit"}}>
-    <div {{bind-attr class=":form-group errors.name:has-error"}}>
+    <div {{bind-attr class=":form-group errors.fieldErrors.title:has-error"}}>
       <label>Title</label>
       {{input type="text" name="title" class="form-control" value=title placeholder="Enter Title"}}
-       {{#if errors.title }}
-        <span class="help-block">{{format-error errors.title}}</span>
+       {{#if error.fieldErrors.title }}
+        <span class="help-block">Format: [{{format-error error.fieldErrors.title}}]</span>
       {{/if}}
     </div>
-    <div {{bind-attr class=":form-group errors.description:has-error"}}>
+    <div {{bind-attr class=":form-group error.fieldErrors.description:has-error"}}>
       <label>Description</label>
       {{input type="text" name="description" class="form-control" value=description placeholder="Enter Description"}}
-      {{#if errors.description }}
-        <span class="help-block">{{format-error errors.description}}</span>
+      {{#if error.fieldErrors.description }}
+        <span class="help-block">Format: [{{format-error error.fieldErrors.description}}]</span>
       {{/if}}
     </div>
     <div class="form-group">
