--- a/refset/assets/javascripts/app/templates/create.hbs
+++ b/refset/assets/javascripts/app/templates/create.hbs
@@ -7,22 +7,22 @@
     <div {{bind-attr class=":form-group error.fieldErrors.title:has-error"}}>
       <label>Title</label>
       {{input type="text" name="title" class="form-control" value=title placeholder="Enter Title"}}
-       {{#each x in error.fieldErrors.title }}
-        <span class="help-block">{{x}}</span>
+       {{#each e in error.fieldErrors.title }}
+        <span class="help-block">{{e}}</span>
       {{/each}}
     </div>
     <div {{bind-attr class=":form-group error.fieldErrors.description:has-error"}}>
       <label>Description</label>
       {{input type="text" name="description" class="form-control" value=description placeholder="Enter Description"}}
-      {{#if error.fieldErrors.description }}
-        <span class="help-block">{{error.fieldErrors.description.message}}</span>
-      {{/if}}
+      {{#each e in error.fieldErrors.description }}
+        <span class="help-block">{{e}}</span>
+      {{/each}}
     </div>
     <div {{bind-attr class=":form-group error.fieldErrors.publicId:has-error"}}>
       <label>Public ID</label>
       {{input type="text" name="publicId" class="form-control" value=description placeholder="Enter Public ID"}}
-      {{#each error.fieldErrors.publicId }}
-        <span class="help-block">{{error.fieldErrors.publicId.message}}</span>
+      {{#each e in error.fieldErrors.publicId }}
+        <span class="help-block">{{e}}</span>
       {{/each}}
     </div>    
     <div class="form-group">
